updated text in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
-            
+            <p>Today's class was packed full of a lot of new information</p>
+            <em>This weekend I will go to the Circus for the first time!</em>
+            <br><strong>The food I'm looking forward to is roast and gumbo.</strong>
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
             </div>
